Improves login with discord routes and documentation
